fixed the logo color in navbar on mobile. it must be white

--- a/css/modules/_navbar.scss
+++ b/css/modules/_navbar.scss
@@ -1,16 +1,3 @@
-@media (max-width: 991px) {
-    html.nav-opened {
-        overflow: hidden;
-
-        .navbar {
-            .navbar-collapse {
-                overflow-y: auto;
-            }
-        }
-    }
-}
-
-
 .navbar {
     padding: 23px 0;
     background: $white;
@@ -255,27 +242,35 @@
             }
         }
     }
-    @media (max-width: 991px) {
-        &.opened {
+}
+
+@media (max-width: 991px) {
+    html.nav-opened {
+        overflow: hidden;
+
+        .navbar {
+            .navbar-collapse {
+                overflow-y: auto;
+            }
+
             .navbar-toggler {
                 .when-scrolled {
-                    display: none;
+                    display: block;
                 }
                 .when-not-scrolled {
-                    display: block;
+                    display: none;
                 }
             }
             .navbar-brand {
                 .when-scrolled {
-                    display: none;
+                    display: block;
                 }
                 .when-not-scrolled {
-                    display: block;
+                    display: none;
                 }
             }
         }
     }
-    
 }
 
 .navbar-light .navbar-nav .nav-link {
